🚧 wip(首页): 首页开发完成，媒体云正在开发
媒体云的tabs选项卡正在开发中，下一步编写二级公共模块

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -318,6 +318,31 @@
     }
 }
 
+// background
+.bg(@bg: white) {
+    background-color: @bg;
+}
+
+// padding-left
+.pl(@value: 0) {
+    padding-left: @value;
+}
+
+// padding-right
+.pr(@value: 0) {
+    padding-right: @value;
+}
+
+// margin-left
+.ml(@value: 0) {
+    margin-left: @value;
+}
+
+// margin-right
+.mr(@value: 0) {
+    margin-right: @value;
+}
+
 // Alpha background
 // -------------------------
 .alpha-background(@rgb: #000, @alpha: .5) {
@@ -463,4 +488,13 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
+}
+
+// position element方向
+.pos(
+    @directionOne: left, @directionOneNum: 0,
+    @directionTwo: top, @directionTwoNum: 0) {
+    position: absolute;
+    @{directionOne}: @directionOneNum;
+    @{directionTwo}: @directionTwoNum;
 }
