--- a/src/assets/css/variable.less
+++ b/src/assets/css/variable.less
@@ -1,1 +1,17 @@
+/*
+    NOTE: global color
+*/
+
 @global-text-color: #333;
+@footer-text-color: black;
+// time axis style
+@time-axis-primary-color: #00DEFF;
+@time-axis-font-color: white;
+
+
+
+/*
+    NOTE: font style
+*/
+
+@font-size: 12px;
