--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -4,7 +4,8 @@ body,
   width: 100%;
   height: 100%;
   font-size: 16px;
-  background-color: red !important;
+  overflow: hidden;
+  background-color: white !important;
   color: black;
   -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
@@ -132,6 +133,10 @@ body {
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
 }
+.router-link-active.active {
+  background: #5965e7;
+  color: #fff;
+}
 .app {
   position: absolute;
   top: 0;
@@ -143,4 +148,8 @@ body {
 .app .page-content {
   flex: 1;
   overflow-y: auto;
+}
+body[data-aos-delay='3700'] [data-aos],
+[data-aos][data-aos][data-aos-delay='3700'] {
+  transition-delay: 3700ms !important;
 }
