--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -4,7 +4,8 @@ body,
     width: 100%;
     height: 100%;
     font-size: 16px;
-    background-color: red !important;
+    overflow: hidden;
+    background-color: white !important;
     color: black;
     -webkit-text-size-adjust: 100%;
     box-sizing: border-box;
@@ -161,6 +162,11 @@ body {
     transform-origin: 0 0;
 }
 
+.router-link-active.active {
+    background: #5965e7;
+    color: #fff;
+}
+
 .app {
     position: absolute;
     top: 0;
@@ -172,4 +178,10 @@ body {
         flex: 1;
         overflow-y: auto;
     }
+}
+
+// Custom animation element parameters
+body[data-aos-delay='3700'] [data-aos],
+    [data-aos][data-aos][data-aos-delay='3700'] {
+    transition-delay: 3700ms !important;
 }
