--- a/src/views/icesnow/home/home.less
+++ b/src/views/icesnow/home/home.less
@@ -14,6 +14,11 @@
             background-image: url('./image/vr@3x.png');
         }
     }
+    .route {
+        .title-icon {
+            background-image: url('./image/route@3x.png');
+        }
+    }
     .strategy {
         .title-icon {
             background-image: url('./image/strategy@3x.png');
