--- a/src/views/icesnow/icesnow.less
+++ b/src/views/icesnow/icesnow.less
@@ -4,6 +4,9 @@
     .icesnow {
         .bg(#F2EEED);
         .pb(16px);
+        display: flex;
+        flex-direction: column;
+        height: 100%;
     }
 }
 
@@ -13,15 +16,14 @@
             // 五字宽度
             .swiper-slide:nth-child(1),
             .swiper-slide:nth-child(2),
-            .swiper-slide:nth-child(7) {
-                width: 77px !important;
+            .swiper-slide:nth-child(6) {
+                width: 78px !important;
             }
             // 四字宽度
             .swiper-slide:nth-child(3),
             .swiper-slide:nth-child(4),
-            .swiper-slide:nth-child(5),
-            .swiper-slide:nth-child(6) {
-                width: 62px !important;
+            .swiper-slide:nth-child(5) {
+                width: 63px !important;
             }
         }
     }
