--- a/src/views/scene/home/home.less
+++ b/src/views/scene/home/home.less
@@ -19,7 +19,7 @@
             overflow-y: auto;
             .pt(16px);
             .pb(16px);
-            .bg(#F2EEED);
+            .bg(white);
             position: absolute;
             left: 100%;
             top: 0;
