--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -180,6 +180,90 @@ body {
     }
 }
 
+.route-btn {
+    width: 34px;
+    height: 34px;
+    border-radius: 4px;
+    position: fixed;
+    right: 7px;
+    bottom: 130px;
+    z-index: 100;
+    background-image: url('../images/route-home.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .2);
+}
+
+.route-wrap {
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: white;
+    z-index: 200;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all .3s ease;
+    transform: translate3d(100%, 0, 0);
+    &.in {
+        transform: translate3d(0, 0, 0);
+    }
+    iframe {
+        border: 0;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        height: 600px;
+    }
+    .route-icon {
+        width: 338px;
+        height: 18px;
+        line-height: 18px;
+        margin: 15px auto;
+        position: relative;
+        text-align: center;
+        // margin: 22px auto;
+        // background-size: 100%;
+        // background-repeat: no-repeat;
+        // background-image: url('../images/route@3x.png');
+        .route-back {
+            position: absolute;
+            left: 0;
+            top: -2px;
+            display: inline-block;
+            vertical-align: top;
+            width: 22px;
+            height: 22px;
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-image: url('../images/route-back.png');
+        }
+    }
+}
+
+.back-btn {
+    width: 34px;
+    height: 34px;
+    border-radius: 4px;
+    position: fixed;
+    right: 7px;
+    bottom: 82px;
+    background-color: rgba(0, 0, 0, .3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+    .icon {
+        display: inline-block;
+        width: 18px;
+        height: 25px;
+        background-image: url('../images/back-home.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+}
+
 // Custom animation element parameters
 body[data-aos-delay='3700'] [data-aos],
     [data-aos][data-aos][data-aos-delay='3700'] {
