--- a/src/components/broadcast/broadcast.less
+++ b/src/components/broadcast/broadcast.less
@@ -24,6 +24,14 @@
                 color: white;
                 font-size: 12px;
             }
+            .link {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 2;
+            }
         }
         .broadcastSwiper-pagination {
             bottom: 41px;
