--- a/src/views/icesnow/icesnow.css
+++ b/src/views/icesnow/icesnow.css
@@ -7,17 +7,19 @@
 .page-content .icesnow {
   background-color: #F2EEED;
   padding-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 .icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(1),
 .icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(2),
-.icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(7) {
-  width: 77px !important;
+.icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(6) {
+  width: 78px !important;
 }
 .icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(3),
 .icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(4),
-.icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(5),
-.icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(6) {
-  width: 62px !important;
+.icesnow .tabs .swiper-wrapper .swiper-slide:nth-child(5) {
+  width: 63px !important;
 }
 .icesnow .banner .logo-wrap {
   background-image: url('home/image/bg@3x.png') !important;
