--- a/src/views/scene/home/home.css
+++ b/src/views/scene/home/home.css
@@ -25,7 +25,7 @@
   overflow-y: auto;
   padding-top: 16px;
   padding-bottom: 16px;
-  background-color: #F2EEED;
+  background-color: white;
   position: absolute;
   left: 100%;
   top: 0;
