--- a/src/components/list-small/list-small.css
+++ b/src/components/list-small/list-small.css
@@ -28,6 +28,7 @@
   font-size: 15px;
   margin-bottom: 14px;
   height: 39px;
+  line-height: 20px;
   display: flex;
   overflow: hidden;
   text-overflow: ellipsis;
