--- a/src/components/list-small/list-small.less
+++ b/src/components/list-small/list-small.less
@@ -21,6 +21,7 @@
                 font-size: 15px;
                 margin-bottom: 14px;
                 height: 39px;
+                line-height: 20px;
                 display: flex;
                 overflow: hidden;
                 text-overflow: ellipsis;
