--- a/src/views/icesnow/strategy/details/details.css
+++ b/src/views/icesnow/strategy/details/details.css
@@ -99,5 +99,5 @@
 .strategy-details .details-wrap .toolbar .icon {
   display: inline-block;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: contain;
 }
