--- a/src/views/scene/team/home/home.less
+++ b/src/views/scene/team/home/home.less
@@ -1,1 +1,13 @@
 @import '../../../../assets/css/global.less';
+
+.scene-team-home {
+    padding-top: 4px;
+    .new-title {
+        padding: 0 17px;
+        padding-top: 18px;
+        background-color: white;
+        color: black;
+        font-size: 15px;
+        line-height: 15px;
+    }
+}
