--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -3,6 +3,8 @@ body,
 #app {
     width: 100%;
     height: 100%;
+    // max-width: 640px;
+    // margin: 0 auto;
     font-size: 16px;
     overflow: hidden;
     background-color: white !important;
@@ -177,6 +179,7 @@ body {
     .page-content {
         flex: 1;
         overflow-y: auto;
+        overflow-x: hidden;
     }
 }
 
@@ -209,12 +212,16 @@ body {
     &.in {
         transform: translate3d(0, 0, 0);
     }
+    .route-inner {
+        height: 100%;
+    }
     iframe {
         border: 0;
         padding: 0;
         margin: 0;
         width: 100%;
-        height: 600px;
+        // height: 600px;
+        height: 60%;
     }
     .route-icon {
         width: 338px;
@@ -268,4 +275,47 @@ body {
 body[data-aos-delay='3700'] [data-aos],
     [data-aos][data-aos][data-aos-delay='3700'] {
     transition-delay: 3700ms !important;
+}
+
+
+// media
+@media screen and (min-width: 640px) {
+    .app {
+        .route-list {
+            .route-item {
+                margin-top: 0 !important;
+            }
+        }
+        .route-wrap {
+            .route-icon {
+                width: 100%;
+                .route-back {
+                    left: 15px;
+                }
+            }
+            iframe {
+                height: 300px;
+            }
+        }
+        .list-big {
+            .big-wrap {
+                justify-content: start;
+            }
+            .big-item {
+                margin-left: 0.18rem;
+                margin-right: 0.18rem;
+                &:nth-child(3),
+                &:nth-child(4),
+                &:nth-child(5) {
+                    margin-top: 0 !important;
+                }
+            }
+        }
+        .list-three-pic {
+            flex: 0 0 4.2rem;
+            .left {
+                flex: 0 0 40% !important;
+            }
+        }
+    }
 }
