--- a/src/components/list-big/list-big.less
+++ b/src/components/list-big/list-big.less
@@ -24,9 +24,18 @@
         padding: 0 11px;
         flex-wrap: wrap;
     }
+    .big-children {
+        overflow: hidden;
+        border-radius: 10px 10px 0 0;
+    }
     .big-item {
         width: 168px;
         border-radius: 10px;
+        overflow: hidden;
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
         .mt(15px);
         .bg(white);
         &:nth-child(1),
@@ -48,8 +57,13 @@
                 top: 0;
                 left: 50%;
                 transform: translateX(-50%);
+                border-radius: 10px 10px 0 0;
+                overflow: hidden;
                 &:first-child {
                     z-index: 1;
+                }
+                &:not(:first-child) {
+                    display: none;
                 }
             }
         }
@@ -158,17 +172,17 @@
         .icon {
             display: inline-block;
             background-repeat: no-repeat;
-            background-size: 100% 100%;
+            background-size: contain;
         }
         .like {
             display: inline-flex;
             align-items: center;
             margin-right: 10px;
-            i {
-                width: 16px;
-                height: 14px;
-                background-image: url(./image/like@2x.png);
-            }
+            // i {
+            //     width: 16px;
+            //     height: 14px;
+            //     background-image: url(./image/like@2x.png);
+            // }
             .num {
                 margin-left: 6px;
             }
