--- a/src/components/list-three-pic/list-three-pic.less
+++ b/src/components/list-three-pic/list-three-pic.less
@@ -11,6 +11,9 @@
         flex: 1;
         display: flex;
         align-items: center;
+        .list {
+            width: 100%;
+        }
         .item {
             &:first-child {
                 .mb(4px);
