--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -51,7 +51,7 @@
 .tabs .swiper-wrapper .swiper-slide a::before {
   content: "";
   position: absolute;
-  left: 0;
+  left: -2px;
   bottom: -6px;
   width: 100%;
   height: 2px;
