--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -52,7 +52,7 @@
                 &::before {
                     content: "";
                     position: absolute;
-                    left: 0;
+                    left: -2px;
                     bottom: -6px;
                     width: 100%;
                     height: 2px;
