--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -16,8 +16,9 @@
   width: 100%;
   height: 102px;
   background-image: url('image/curtain@2x.png');
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
+  background-position: center bottom;
 }
 .home-header .logo {
   width: 200px;
