--- a/src/views/icesnow/travel/details/details.less
+++ b/src/views/icesnow/travel/details/details.less
@@ -89,7 +89,7 @@
             .icon {
                 display: inline-block;
                 background-repeat: no-repeat;
-                background-size: 100%;
+                background-size: contain;
             }
         }
     }
