--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -3,8 +3,6 @@ body,
 #app {
     width: 100%;
     height: 100%;
-    // max-width: 640px;
-    // margin: 0 auto;
     font-size: 16px;
     overflow: hidden;
     background-color: white !important;
@@ -280,12 +278,14 @@ body[data-aos-delay='3700'] [data-aos],
 
 // media
 @media screen and (min-width: 640px) {
+    body {
+        background-color: #f9f9f9 !important;
+    }
     .app {
-        .route-list {
-            .route-item {
-                margin-top: 0 !important;
-            }
-        }
+        max-width: 400px;
+        margin: 0 auto;
+        left: 50%;
+        transform: translateX(-50%);
         .route-wrap {
             .route-icon {
                 width: 100%;
@@ -297,25 +297,17 @@ body[data-aos-delay='3700'] [data-aos],
                 height: 300px;
             }
         }
-        .list-big {
-            .big-wrap {
-                justify-content: start;
-            }
-            .big-item {
-                margin-left: 0.18rem;
-                margin-right: 0.18rem;
-                &:nth-child(3),
-                &:nth-child(4),
-                &:nth-child(5) {
-                    margin-top: 0 !important;
-                }
-            }
-        }
         .list-three-pic {
             flex: 0 0 4.2rem;
             .left {
                 flex: 0 0 40% !important;
             }
+        }
+    }
+    .pswp__caption {
+        bottom: 10px !important;
+        .pswp__caption__center {
+            padding: 0 !important;
         }
     }
 }
