--- a/src/views/scene/live/live.less
+++ b/src/views/scene/live/live.less
@@ -1,6 +1,24 @@
 @import '../../../assets/css/global.less';
 
 .scene-live {
+    padding: 0 16px;
+    padding-top: 9px;
+    .videos-single {
+        .video-js {
+            border-radius: 10px;
+            video {
+                border-radius: 10px;
+            }
+            .vjs-control-bar {
+                border-radius: 0 0 10px 10px;
+            }
+        }
+        .video-player {
+            .vjs-poster {
+                border-radius: 10px;
+            }
+        }
+    }
     .more-btn {
         padding-top: 28px;
         text-align: center;
